wiki: Correct a capital typo.

--- a/r2/r2/templates/wikibasepage.html
+++ b/r2/r2/templates/wikibasepage.html
@@ -66,4 +66,4 @@
     ${thing.content}
 </div>
 
-<!--Reddit wikis are powered by Cray-1™ supercomputers-->
+<!--reddit wikis are powered by Cray-1™ supercomputers-->
