Remove spurious submit form title wrap attribute.
This was prompted by buggy IE10 behavior where the "required" attribute
form validation seems to treat the textarea as empty with the "wrap"
attribute present.

--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -59,7 +59,7 @@ ${thing.formtabs_menu}
 
 <div class="spacer">
   <%utils:round_field title="${_('title')}" id="title-field">
-    <textarea name="title" rows="2" cols="1" wrap="hard" required>${thing.title}</textarea>
+    <textarea name="title" rows="2" required>${thing.title}</textarea>
     ${error_field("NO_TEXT", "title", "div")}
     ${error_field("TOO_LONG", "title", "div")}
   </%utils:round_field>
