Accessibility: Add ARIA landmarks.
These are the modern equivalent of the "jump to content" link.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -132,7 +132,7 @@
       ##<div class="fixedwidth"><!--IE6sux--></div>
       ##<div class="clearleft"><!--IE6sux--></div>
       <a name="content"></a>
-      <div ${tags(id=thing.content_id)} class="content${css_class(thing)}">
+      <div ${tags(id=thing.content_id)} class="content${css_class(thing)}" role="main">
         ${content()}
       </div>
     %endif
