--- a/r2/r2/templates/errorpage.html
+++ b/r2/r2/templates/errorpage.html
@@ -26,7 +26,7 @@ from r2.lib.filters import unsafe, safemarkdown
 %>
 
 <div id="classy-error" class="content">
-  <img src="${static(thing.image_url)}" alt="an unhappy alien" />
+  <img src="${static(thing.image_url)}" alt="" />
 
   <h1>${thing.title}</h1>
   <div class="errorpage-message">
