wiki: Replace wiki css with less.

--- a/r2/r2/templates/wikibasepage.html
+++ b/r2/r2/templates/wikibasepage.html
@@ -24,6 +24,7 @@
 
 <%def name="stylesheet()">
     ${parent.stylesheet()}
+    ${less_stylesheet('wiki.less')}
 </%def>
 
 <%def name="actionsbar(actions)">
