--- a/r2/r2/templates/wikipagesettings.html
+++ b/r2/r2/templates/wikipagesettings.html
@@ -72,5 +72,5 @@
     </%utils:line_field>
     %endif
 
-    <input type="submit" onclick="$('#pagesettings').submit()" value="${_('save settings')}" />
+    <input type="submit" class="wiki_button" onclick="$('#pagesettings').submit()" value="${_('save settings')}" />
 </div>
