--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -44,5 +44,5 @@
     <label for="reason">${_("reason for revision")}</label><br/>
     <input type="text" name="reason" maxlength="256" id="wiki_revision_reason" />
     <input type="hidden" id="previous" name="previous" value="${thing.previous}" />
-    <br/><br/><input type="submit" value="${_('save page')}" />
+    <br/><br/><input type="submit" class="wiki_button" value="${_('save page')}" />
 </form>
