--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -39,7 +39,7 @@
 </div>
 
 <form method="post" id="editform" onsubmit="r.wiki.submitEdit(event)">
-    <textarea name="content" rows="20" cols="20" style="width: 100%" id="content">${keep_space(thing.page_content)}</textarea>
+    <textarea name="content" rows="20" cols="20" style="width: 100%" id="wiki_page_content">${keep_space(thing.page_content)}</textarea>
     <br/><br/>
     <label for="reason">${_("reason for revision")}</label><br/>
     <input type="text" name="reason" maxlength="256" id="wiki_revision_reason" />
