rss: Don't render invalid thumbnails for built-in sprited thumbs.

--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -33,6 +33,7 @@
    else:
       url = permalink
    use_thumbs = thing.has_thumbnail and thing.thumbnail and not request.GET.has_key("nothumbs")
+   use_thumbs = use_thumbs and not thing.thumbnail_sprited
  %>
 <item>
   <title>${thing.title}</title>
