Remove outline added to vote arrows by accessibility patch.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -609,6 +609,7 @@ ul.flat-vert {text-align: left;}
     width: 15px;
     margin-left: auto;
     margin-right: auto; 
+    outline: none;
 }
 
 .arrow.upmod { 
