Only show PayPal button if there's a button to show.

--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -52,7 +52,9 @@
         ${self.google_button()}
       %endif
 
-      ${self.paypal_button()}
+      %if thing.paypal_buttonid:
+        ${self.paypal_button()}
+      %endif
 
       <div class="throbber"></div>
 
