Add "contest mode" for fairer best of 2012 voting threads.
When contest mode is enabled:

 * Comments are randomly sorted.
 * Comment scores are hidden.
 * Replies to top-level comments are hidden behind a toggle button.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -1117,6 +1117,16 @@ a.author { margin-right: 0.5em; }
     color: gray;
 }
 
+.commentarea .menuarea .toggle {
+    display: inline-block;
+}
+
+.commentarea .menuarea .toggle a {
+    color: gray;
+    font-weight: bold;
+    font-size: x-small;
+}
+
 .commentarea > .usertext {
     margin: 0 0 10px 10px;
     overflow: auto;
@@ -1393,10 +1403,17 @@ a.star { text-decoration: none; color: #ff8b60 }
 }
 
 .comment .score { font-size: x-small; }
-.comment .child {
+.comment .child, .comment .showreplies {
     margin-top: 10px; 
     margin-left: 15px; 
     border-left: 1px dotted #DDF;
+}
+
+.comment .showreplies {
+    display: block;
+    margin-top: 7px;
+    margin-bottom: 15px;
+    padding: 5px;
 }
 
 textarea.gray { color: gray; }
