Limit the number of campaigns per promoted link

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4683,6 +4683,9 @@ table.lined-table {
         margin-top: 0px;
     }
 
+.create-promo .hidden { display: none; }
+button.new-campaign:disabled { color: gray; }
+
 .bidding-history { padding-top: 10px; }
 .bidding-history .linefield {
     width: auto; 
